WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182944
SIGFPE @ int WebCore::SVGToOTFFontConverter::scaleUnitsPerEm<int> const + 45
https://bugs.webkit.org/show_bug.cgi?id=182944
Summary
SIGFPE @ int WebCore::SVGToOTFFontConverter::scaleUnitsPerEm<int> const + 45
Dean Jackson
Reported
2018-02-19 15:51:35 PST
SIGFPE @ int WebCore::SVGToOTFFontConverter::scaleUnitsPerEm<int> const + 45
Attachments
Patch
(4.20 KB, patch)
2018-02-19 15:54 PST
,
Dean Jackson
mmaxfield
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2018-02-19 15:54:13 PST
<
rdar://problem/35369984
>
Dean Jackson
Comment 2
2018-02-19 15:54:45 PST
Created
attachment 334198
[details]
Patch
Dean Jackson
Comment 3
2018-02-19 16:04:54 PST
Committed
r228715
: <
https://trac.webkit.org/changeset/228715
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug